--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -173,20 +173,20 @@
 
     <Button
         android:id="@+id/button_clear"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_clear"
         app:layout_constraintBottom_toTopOf="@+id/button_seven"
-        app:layout_constraintEnd_toStartOf="@+id/button_eight"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/button_eight"
+        app:layout_constraintStart_toStartOf="@+id/button_seven" />
 
     <Button
         android:id="@+id/button_clear_all"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_clear_all"
         app:layout_constraintBottom_toTopOf="@+id/button_divide"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_nine" />
+        app:layout_constraintEnd_toEndOf="@+id/button_divide"
+        app:layout_constraintStart_toStartOf="@+id/button_nine" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
